# assessmentask20260707

./: .gitignore  README.md  frontend.py  main.py  pyproject.toml  requirements.txt
backend/: __init__.py  ai_agent.py  config.py  guardrails.py  main.py  safety.py  session_store.py  state_machine.py  tools.py
backend/evaluation/: __init__.py  phq9.py  severity.py
tests/: test_evaluation.py  test_routing.py  test_safety.py  test_session.py
