[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-mental-health-therapist"
version = "0.1.0"
description = "Multi-turn FastAPI backend with PHQ-9 evaluation, DSM-5 cognitive profiling, agentic state machine, and un-bypassable safety infrastructure."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.11.2",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.135.1",
    "huggingface-hub>=1.6.0",
    "httpx>=0.28.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "langgraph>=1.0.10",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "streamlit>=1.55.0",
    "uvicorn>=0.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
